Changed remote_user to become_user

--- a/deploy_webserver.yml
+++ b/deploy_webserver.yml
@@ -3,7 +3,9 @@
   vars:
     http_port: 80
     max_clients: 200
-  remote_user: root
+    become: yes
+    become_user: root
+    become_method: sudo
   tasks:
   - name: ensure apache is at the latest version
     yum:
