--- a/deploy_webserver.yml
+++ b/deploy_webserver.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: webservers
-    # become: yes
-    become_user: root
-    become_method: sudo
+  become: yes
+  become_user: root
+  become_method: sudo
   vars:
     http_port: 80
     max_clients: 200
