--- a/deploy_webserver.yml
+++ b/deploy_webserver.yml
@@ -11,10 +11,10 @@
     yum:
       name: httpd
       state: latest
-  # - name: write the apache config file
-  #   template:
-  #     src: /srv/httpd.j2
-  #     dest: /etc/httpd.conf
+  - name: write the apache config file
+    template:
+      src: /srv/httpd.j2
+      dest: /etc/httpd.conf
     notify:
     - restart apache
   - name: ensure apache is running (and enable it at boot)
