Updated entries in deploye_webserver to support jinja port and maxclient configs Added httpd.conf jinja template

--- a/deploy_webserver.yml
+++ b/deploy_webserver.yml
@@ -13,8 +13,8 @@
       state: latest
   - name: write the apache config file
     template:
-      src: /srv/httpd.j2
-      dest: /etc/httpd.conf
+      src: roles/common/template/httpd.j2
+      dest: /etc/httpd/conf/httpd.conf
     notify:
     - restart apache
   - name: ensure apache is running (and enable it at boot)
