Updated monthend script execution logic

--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -11,5 +11,4 @@
       src: roles/common/templates/uptime.j2
       dest: /tmp/uptime.sh
   - name: Execute the uptime script on target
-    script:
-      /tmp/uptime.sh
+    script: /tmp/uptime.sh
