Adding new script and folder. Updating the script to use copy module instead

--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -7,8 +7,6 @@
 
   tasks:
   - name: Create the uptime wrapper shell script
-    template:
-      src: roles/common/templates/uptime.j2
-      dest: /tmp/uptime.sh
+    copy: src: roles/common/files/uptime.sh  dest: /tmp/uptime.sh  mode: 0755
   - name: Execute the uptime script on target
     script: /tmp/uptime.sh
