Edit the playbook file for check uptime in month end

--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -11,5 +11,7 @@
       src: roles/common/files/uptime.sh
       dest: /tmp/uptime.sh  
       mode: 0755
+  - name: Validate file has been copied
+    shell: ls -l /tmp/uptime.sh
   - name: Execute the uptime script on target
     script: /tmp/uptime.sh
