Edit cat command

--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -12,6 +12,6 @@
       dest: /tmp/uptime.sh  
       mode: 0755
   - name: Validate file has been copied
-    shell: ls -l /tmp/uptime.sh
+    shell: cat /tmp/uptime.sh
   - name: Execute the uptime script on target
     script: /tmp/uptime.sh
