--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -15,4 +15,4 @@
     wait_for: 
       path: /root/uptime.sh  
   - name: Execute the uptime script on target
-    script: bash /root/uptime.sh
+    script: sh /root/uptime.sh
