--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -8,5 +8,9 @@
   tasks:
   - name: Execute the uptime script
     script: roles/common/files/uptime.sh
+    register: result
+  -debug:
+    var: result
+    verbosity: 2
   - name: Run with a raw module instead
     raw: uptime
