--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -9,8 +9,6 @@
   - name: Execute the uptime script
     script: roles/common/files/uptime.sh
     register: result
-  -debug:
-    var: result
-    verbosity: 2
+  -debug: msg="{{result.stdout_lines}}""
   - name: Run with a raw module instead
     raw: uptime
