Trying result.stdout instead of result.stdout_lines

--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -10,6 +10,6 @@
     script: roles/common/files/uptime.sh
     register: result
   - debug: 
-    msg: "{{result.stdout_lines}}"
+    msg: "{{result.stdout}}"
   - name: Run with a raw module instead
     raw: uptime
