Fix typo errror for variable outi to msg

--- a/check_monthend.yml
+++ b/check_monthend.yml
@@ -14,7 +14,7 @@
 
   - name: Run with a raw module instead
     raw: uptime
-    register: outi
+    register: msg
 
   - debug: 
     msg = "{{outi.stdout}}"
